compiler/testData/cli/jvm/enumEntriesNotEnabled.out
compiler/testData/cli/jvm/enumEntriesNotEnabled.kt:7:26: error: unresolved reference: entries
    val entries = MyEnum.entries
                         ^
COMPILATION_ERROR
