compiler/testData/cli/jvm/enumEntriesNotEnabled.kt
enum class MyEnum {
    OK, NOPE
}

@OptIn(ExperimentalStdlibApi::class)
fun box(): String {
    val entries = MyEnum.entries
    return "OK"
}
